[gd_scene load_steps=5 format=3 uid="uid://c18j0kkjserp8"]

[ext_resource type="PackedScene" uid="uid://dmlpnp15mw2fo" path="res://addons/window_system/windows/base_window.tscn" id="1_h2ffa"]
[ext_resource type="Theme" uid="uid://03q268pfdt2r" path="res://src/themes/font_theme.tres" id="2_mqmta"]
[ext_resource type="Script" uid="uid://c658ew0u1gs5w" path="res://src/windows/search_window.gd" id="2_tc5xc"]
[ext_resource type="StyleBox" uid="uid://8fmbo06bq5bv" path="res://src/themes/window_panel_theme.tres" id="4_mfqwk"]

[node name="SearchWindow" instance=ExtResource("1_h2ffa")]
offset_right = 945.0
offset_bottom = 607.0
theme = ExtResource("2_mqmta")
script = ExtResource("2_tc5xc")
panel_corner_radius = 0
panel_style_override = ExtResource("4_mfqwk")

[node name="MarginContainer" type="MarginContainer" parent="Contents/VBoxContainer/MainContainer" index="0"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer" index="0"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer" index="0"]
layout_mode = 2

[node name="Label" type="Label" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer" index="0"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Maps: "

[node name="MapsOption" type="OptionButton" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../../HBoxContainer2/FieldsOption")
selected = 0
item_count = 1
popup/item_0/text = "All Maps"
popup/item_0/id = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer" index="1"]
layout_mode = 2

[node name="Label" type="Label" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer2" index="0"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Field:"

[node name="FieldsOption" type="OptionButton" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer2" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../HBoxContainer/MapsOption")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../../HBoxContainer3/OperatorOption")

[node name="HBoxContainer3" type="HBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer" index="2"]
layout_mode = 2

[node name="Label" type="Label" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer3" index="0"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Operator:"

[node name="OperatorOption" type="OptionButton" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer3" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../HBoxContainer2/FieldsOption")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../../HBoxContainer4/SearchValue")
alignment = 1
selected = 0
item_count = 7
popup/item_0/text = "=="
popup/item_0/id = 0
popup/item_1/text = "!="
popup/item_1/id = 6
popup/item_2/text = ">"
popup/item_2/id = 1
popup/item_3/text = ">="
popup/item_3/id = 2
popup/item_4/text = "<"
popup/item_4/id = 3
popup/item_5/text = "<="
popup/item_5/id = 4
popup/item_6/text = "&"
popup/item_6/id = 5

[node name="HBoxContainer4" type="HBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer" index="3"]
layout_mode = 2

[node name="Label" type="Label" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer4" index="0"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Value:"

[node name="SearchValue" type="LineEdit" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer4" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../HBoxContainer3/OperatorOption")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../../ResultsList")
caret_blink = true

[node name="SearchButton" type="Button" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer" index="4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../HBoxContainer4/SearchValue")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../ResultsList")
text = "Search"

[node name="HSeparator" type="HSeparator" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer" index="5"]
layout_mode = 2

[node name="ResultsList" type="ItemList" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer" index="6"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../HBoxContainer4/SearchValue")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")

[connection signal="text_submitted" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer4/SearchValue" to="." method="_on_search_value_text_submitted"]
[connection signal="pressed" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/SearchButton" to="." method="_on_search_button_pressed"]
[connection signal="item_activated" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/ResultsList" to="." method="_on_results_list_item_activated"]
